--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 
     <body>
         <!--put your initial page content here-->
-        aaaaaaa
+        
         <!--you can also use this space for internal scripts;
         place these within <script> tags-->
 
         <!--put your external script links here-->
+        <script type="text/javascript" src="lib/d3.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
