--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
 
     <body>
         <!--put your initial page content here-->
-        
+        <h1>Economic and Environmental attributes of EU Area countries in 2021</h1>
         <!--you can also use this space for internal scripts;
         place these within <script> tags-->
-
+            <p><br>Data presented as percentages of totals for the included countries. Attributes are Real GDP, Renewable energy production in total megawatts, Utilized Agricultural Area which is the total area taken
+            by arable land, CO2 emissions, and total terrestrial protected areas. <br> Source: Eurostat.</p>
         <!--put your external script links here-->
         <script type="text/javascript" src="lib/d3.js"></script>
         <script type="text/javascript" src="lib/topojson.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
+        
     </body>
 </html>
